[project]
name = "streamlit-persist-session"
version = "0.1.0"
description = "Persistent data across page reloads for Streamlit applications"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.58.0",
    "streamlit-cookies-controller>=0.0.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.19",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
